<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, OhSnap365!</string>
    <string name="app_name">OhSnap365</string>
    <string name="launchEmailer">Send</string>
    <string id="@loadingImage" name="loadingTag">Loading Image...</string>
    <string id="@previewImage" name="previewTag">Image Preview:</string>
    <string id="@notEnoughMemory" name="outOfMemoryImage">Not enough memory to display preview</string>
    <string id="@noImageProvided" name="noImageTag">OhSnap365 wasn\'t launched with an image.\n\nA future version will have a gallery pane here so you won\'t have to load me by \"Sharing\"! :)</string>
    
    <string name="logintv">login:</string>
    <string name="secretwordtv">secret word:</string>
    <string name="captiontv">Image caption:</string>
    <string name="datetv">Date to post: </string>
    
    <string id="@appEmailTag" name="appEmailTag">Send to OhSnap365.com using:</string>
    
    <string id="@gotoOhSnap365" name="gotoOhSnap365">Sign up at &lt;a
	href=\&quot;http://www.OhSnap365.com\&quot;&gt;www.OhSnap365.com&lt;/a&gt;
	today if you aren\'t already a member!</string>
    
    <string name="noUserMessage">No options were found.\nPlease provide your login information.</string>
   	<string name="titleOptions">Options</string>
    <string name="saveOptions">Save</string>
    <string name="cancelOptions">Cancel</string>
    
    <string name="changeSecretword">Change secret word</string>
    <string name="useDate">Use a different date</string>
    <string name="captionChange">Change the caption</string>
    <string name="rotate">Rotate 90 degrees</string>
    <string name="join">Join fun group</string>
    <string name="leave">Leave fun group</string>
    <string name="subscribe">Subscribe to fun group</string>
    <string name="unsubscribe">Un-subscribes from fun group</string>
    <string name="commentsOn">Comments on</string>
    <string name="commentsOff">Comments off</string>
    <string name="reminderOn">Reminder on</string>
    <string name="reminderOff">Reminder off</string>
</resources>
