<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/logintv"
	/>
	<EditText 
		android:id="@+id/login" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/secretwordtv"
	/>
	<EditText 
		android:id="@+id/secretword" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:password="true"	/>
		
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<Button
			android:id="@+id/saveOptions"
			android:text="@string/saveOptions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
		/>
		<Button
			android:id="@+id/cancelOptions"
			android:text="@string/cancelOptions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
		/>
	</LinearLayout>
</LinearLayout>
