<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/visitOhSnap" 
		/>
	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text=""
			android:id="@+id/temporaryFiller" 
		/>
		
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:layout_weight="2"
		>
		<TextView
		    android:id="@+id/topTag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/loadingTag"
		/>
		<ImageView 
		   android:id="@+id/picview"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:visibility="invisible"
		/>
	</LinearLayout>
	
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_weight="2"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/datetv"
			/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="  "
			/>
			<Button
				android:id="@+id/changeDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:layout_weight="1"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/captiontv"
		/>
		<EditText 
			android:id="@+id/caption" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<Button
			android:id="@+id/launchEmailer"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/launchEmailer"
		/>

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text=""
		/>
	</LinearLayout>
	
</LinearLayout>
